--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.0.6
+autopep8==1.4.3
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+flask-heroku==0.1.9
+Flask-Login==0.4.1
 Flask-Migrate==2.3.1
 Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
@@ -13,6 +16,7 @@ Mako==1.0.7
 MarkupSafe==1.1.0
 oauthlib==2.1.0
 psycopg2==2.7.6.1
+pycodestyle==2.5.0
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
